--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="https://pbs.twimg.com/profile_images/864282616597405701/M-FEJMZ0_400x400.jpg" alt="my photo">
             </td>
             <td>
-                <h1>JAI PRAKASH GUPTA</h1>
+                <h1 style="color:blue">JAI PRAKASH GUPTA</h1>
     <p> <em> Intern at <strong>Google</strong>, Ex-intern at <strong>Apple</strong> </em></p>
 
     <p>Hola! My name is Jai Prakash. I am a senior software developer here at Google. <br> My expertise lie in data structure and algortihm and web development.</p>
